Remove last img from div and placed it beneath the .text class. This fixed the image getting cut off.

--- a/5 - portfolio/styles.css
+++ b/5 - portfolio/styles.css
@@ -52,7 +52,7 @@ main {
 
 /* about panel */
 .panel.about {
-  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 3fr 1fr;
   overflow: hidden;
 }
 
@@ -63,7 +63,7 @@ main {
 
 /* photos panel */
 .panel.photos {
-  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 3fr;
   overflow: hidden;
 }
 
